# Squize

./: LICENSE  README.md  main.py  pyproject.toml  test.py
modules/: __init__.py
modules/Echo/: gemini.py
modules/Lender/: __init__.py
modules/QuizD/: __init__.py  accounting.py  biology.py  chemistry.py  earth.py  history.py  physics.py  prompt.py
routers/: api.py  htmx.py
static/: index.html
