[tool.poetry]
name = "squize"
version = "0.1.0"
description = ""
authors = ["kjhishere <kjhishere@proton.me>"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
slowapi = "^0.1.9"
google-generativeai = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
